# atsy

./: MANIFEST.in  README.md  pyproject.toml
atsy/: __init__.py  __main__.py  ats.py  parser.py  parser_ats.py  parser_bytes.py
atsy/parser/: __init__.py
examples/: example-1.py  stormpy-to-atsy.py
tests/: test_ats.py  test_parser.py  test_parser_ats.py  test_parser_bytes.py
